Fix flyout overlapping OOJSUI windows
The `z-index` of a OOJSUI Window is set on the element itself. Therefore
we unfortunately need to use `!important` here.

ERM20016

[3.1.x]

--- a/resources/stylesheets/fixes/desktop.less
+++ b/resources/stylesheets/fixes/desktop.less
@@ -45,5 +45,5 @@ span.ve-ce-branchNode-slug {
 // Window must be on top of everything, else, its buttons will get hidden
 // below the top bar in full-screen dialogs or in mobile
 .oo-ui-window {
-	z-index: 9999;
+	z-index: 9999 !important;
 }
